<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="genre">Jenis:</string>
    <string name="release_date">Tanggal Rilis:</string>
    <string name="description">Deskripsi:</string>
    <string name="poster_picture">Gambar Poster</string>
    <string name="_4_3">4.3</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Pengaturan</string>
    <string name="search">Cari</string>
    <string name="search_hint">Cari</string>
    <string name="appwidget_text">Daftar Favorit</string>
    <string name="empty_text">Tidak Ada Data</string>
    <string name="title_text">Movie Catalogue</string>
    <string name="language">Pengaturan Bahasa</string>
    <string name="title_language">Ubah Bahasa</string>
    <string name="key_language">key_language</string>
    <string name="summary_language">Ketuk untuk mengganti bahasa</string>
    <string name="notifications">Notifikasi</string>
    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_daily_reminder">Aktifkan atau matikan pilihan ini</string>
    <string name="title_daily_reminder">Pengingat Harian</string>
    <string name="title_release_reminder">Pengingat Rilis Hari ini</string>
    <string name="summary_release_reminder">Aktifkan atau matikan pilihan ini</string>
    <string name="notifikasi">Apakah kamu sudah mengecek movie catalogue hari ini</string>
    <string name="trailer">Trailer:</string>
    <string name="production_company">Perusahaan Produksi:</string>
    <string name="tag">Tag:</string>
    <string name="popularity">Popularitas:</string>
    <string name="number_of_episode">Jumlah Episode:</string>
    <string name="cast">Pemeran:</string>
    <string name="cast_name">Nama Pemeran</string>
    <string name="cast_image">Gambar Pemeran</string>
    <string name="widget_image">Gambar Widget</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
