<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/language">
        <Preference
            android:key="@string/key_language"
            android:summary="@string/summary_language"
            android:title="@string/title_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:summary="@string/summary_daily_reminder"
            android:title="@string/title_daily_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_release_reminder"
            android:title="@string/title_release_reminder"
            android:summary="@string/summary_release_reminder"/>

    </PreferenceCategory>
</PreferenceScreen>