<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/cv_movie"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.github.florent37.shapeofview.shapes.RoundRectView
            android:id="@+id/rr_poster_movie"
            android:layout_width="130dp"
            android:layout_height="150dp"
            app:shape_roundRect_bottomLeftRadius="10dp"
            app:shape_roundRect_bottomRightRadius="10dp"
            app:shape_roundRect_topLeftRadius="10dp"
            app:shape_roundRect_topRightRadius="10dp"
            app:shape_roundRect_borderWidth="0.1dp">

            <ImageView
                android:id="@+id/iv_poster_movie"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster_picture"
                tools:src="@color/colorPrimary" />

        </com.github.florent37.shapeofview.shapes.RoundRectView>

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/rr_poster_movie"
            android:layout_toRightOf="@id/rr_poster_movie"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/coloBlack"
            tools:text="Judul" />

        <com.idw.project.cataloguemovie.customFonts.MyTextView_Roboto_Regular
            android:id="@+id/tv_release_date_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_movie"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/rr_poster_movie"
            android:layout_toRightOf="@id/rr_poster_movie"
            android:maxLines="5"
            tools:text="Tanggal Rilis"
            android:textColor="@color/coloBlack"
            android:textStyle="bold"/>

        <RatingBar
            android:id="@+id/rb_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="true"
            android:numStars="10"
            android:rating="4.4"
            android:stepSize="0.1"
            android:theme="@style/RatingBar"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/rr_poster_movie"
            android:layout_toRightOf="@id/rr_poster_movie"
            android:layout_below="@+id/tv_release_date_movie"
            android:layout_marginStart="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/tv_rb_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/my_button_bg"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingLeft="7dp"
            android:text="@string/_4_3"
            android:textColor="@color/coloBlack"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/rr_poster_movie"
            android:layout_toRightOf="@id/rr_poster_movie"
            android:layout_below="@+id/rb_movie"
            android:layout_marginStart="@dimen/activity_vertical_margin" />

        <com.idw.project.cataloguemovie.customFonts.MyTextView_Roboto_Regular
            android:id="@+id/tv_description_movie"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_rb_movie"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/rr_poster_movie"
            android:layout_toRightOf="@id/rr_poster_movie"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/coloBlack"
            tools:text="@string/description"
            android:layout_marginStart="@dimen/activity_vertical_margin" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>